--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       var request = new XMLHttpRequest();
       request.open('POST', url, true);
       request.setRequestHeader('Content-Type', 'application/json');
-      request.setRequestHeader('Authorization', 'Basic ZGVtby1tYXN0ZXI6NGE2NjJlYjEzNjQ3Y2ZiOWVkNGNhMzZjNWU5NWM3YjM=');
+      request.setRequestHeader('Authorization', 'Basic ****');
 
       request.onload = function() {
         if (request.status >= 200 && request.status < 400) {
