--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img src="./logo.svg" class="navbar-brand" />
+          <a href="//www.yhat.com" target=_blank><img src="./logo.svg" class="navbar-brand" /></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
