--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
     });
 
     function readImage(file) {
+      if (file.size > 1e+6) {
+        $("#preview").append('<p class="alert alert-danger">Image must be < 1MB.</p>');
+        return;
+      }
+
       var reader = new FileReader();
       reader.addEventListener("load", function () {
         var image  = new Image();
