removing file size stopper

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
     function readImage(file) {
       if (file.size > 1e+6) {
-        $("#preview").append('<p class="alert alert-danger">Image must be < 1MB.</p>');
-        return;
+        // $("#preview").append('<p class="alert alert-danger">Image must be < 1MB.</p>');
+        // return;
       }
 
       var reader = new FileReader();
