--- a/index2.html
+++ b/index2.html
@@ -29,9 +29,10 @@
           <div id="preview">
             <img src="./placeholder.png" />
           </div>
-          <input id="browse" class="form-control" type="file" />
-          <button type="submit" class="btn btn-primary">Tag an uploaded Image</button>
-          <button id="demo" class="btn btn-info">Tag a Demo Image</button>
+          <input id="browse" class="form-control" type="file" style="margin-bottom:5px;"/>
+          <br>
+          <button type="submit" class="btn btn-primary">Classify an uploaded image</button>
+          <button id="demo" class="btn btn-info">Classify a demo image</button>
         </div>
       </form>
       <hr>
