--- a/index2.html
+++ b/index2.html
@@ -31,8 +31,8 @@
           </div>
           <input id="browse" class="form-control" type="file" style="margin-bottom:5px;" />
           <br>
-          <button type="submit" class="btn btn-primary btn-orange">Classify your uploaded image</button>
-          <button id="demo" class="btn btn-info btn-blue" style="">Classify a demo image</button>
+          <button type="submit" class="btn btn-orange">Classify your uploaded image</button>
+          <button id="demo" class="btn btn-blue" style="">Classify a demo image</button>
         </div>
       </form>
       <hr>
